--- a/v1/Makefile
+++ b/v1/Makefile
@@ -4,10 +4,10 @@ OPENMPLIB = -fopenmp
 
 all: asg3-pthread asg3-openmp
 
-asg3-pthread: asg3-pthread.c util.c
+asg3-pthread: asg3-pthread.c
 	$(CC) -o $@ $^ $(PTHREADLIB) -O3
 
-asg3-openmp: asg3-openmp.c util.c
+asg3-openmp: asg3-openmp.c
 	$(CC) -o $@ $^ $(OPENMPLIB) -O3
 
 clean:
